--- a/src/App.css
+++ b/src/App.css
@@ -308,6 +308,7 @@ textarea {
 .logo-container {
   display: flex;
   align-items: center;
+  justify-content: center;
   z-index: 1001;
   position: relative;
   width: 120px;
@@ -319,18 +320,17 @@ textarea {
   margin-top: 40px;
   margin-bottom: -20px;
   border: 2px solid var(--primary-light);
-  justify-content: center;
-  padding: 20px;
+  padding: 25px;
 }
 
 .logo-image {
-  height: 90px;
+  height: 80px;
   width: auto;
   object-fit: contain;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 -5px;
   display: block;
-  margin: 0 auto;
+  transform: translateY(5px);
 }
 
 .mobile-menu-button {
@@ -550,11 +550,13 @@ textarea {
     height: 100px;
     margin-top: 35px;
     margin-bottom: -15px;
-    padding: 15px;
+    padding: 20px;
   }
   
   .logo-image {
-    height: 75px;
+    height: 70px;
+    margin: 0 0 0 -3px;
+    transform: translateY(3px);
   }
 }
 
@@ -1593,11 +1595,13 @@ body, html {
     height: 100px;
     margin-top: 35px;
     margin-bottom: -15px;
-    padding: 15px;
+    padding: 20px;
   }
   
   .logo-image {
-    height: 75px;
+    height: 70px;
+    margin: 0 0 0 -3px;
+    transform: translateY(3px);
   }
 }
 
