--- a/src/App.css
+++ b/src/App.css
@@ -320,11 +320,11 @@ textarea {
   margin-top: 40px;
   margin-bottom: -20px;
   border: 2px solid var(--primary-light);
-  padding: 49px;
+  padding: 42px;
 }
 
 .logo-image {
-  height: 62px;
+  height: 65px;
   width: auto;
   object-fit: contain;
   padding: 0;
@@ -353,7 +353,10 @@ textarea {
   color: var(--text-dark);
   text-decoration: none;
   font-weight: 600;
+  font-size: 1.15rem;
+  padding: 10px 15px;
   transition: color 0.3s ease;
+  position: relative;
 }
 
 .nav-links a:hover {
@@ -546,17 +549,31 @@ textarea {
   }
   
   .logo-container {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     margin-top: 35px;
     margin-bottom: -15px;
-    padding: 39px;
+    padding: 30px;
   }
   
   .logo-image {
-    height: 52px;
+    height: 55px;
     margin: 0 0 0 -13px;
     transform: translateY(3px);
+  }
+  
+  .weekly-schedule {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-width: 100vw;
+    padding: 5px 0;
+  }
+  
+  .schedule-container {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-width: 100vw;
+    padding: 0;
   }
 }
 
@@ -1395,6 +1412,8 @@ body, html {
     max-width: 100%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 0;
+    margin: 10px 0;
   }
   
   .weekly-schedule {
@@ -1402,11 +1421,20 @@ body, html {
     max-width: 100%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 5px;
+    margin: 0;
   }
   
   .schedule-grid {
     min-width: 800px;
     width: 800px;
+    margin: 0;
+  }
+  
+  .form-section {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    padding: 15px 10px;
   }
 }
 
@@ -1591,17 +1619,31 @@ body, html {
   }
   
   .logo-container {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     margin-top: 35px;
     margin-bottom: -15px;
-    padding: 39px;
+    padding: 30px;
   }
   
   .logo-image {
-    height: 52px;
+    height: 55px;
     margin: 0 0 0 -13px;
     transform: translateY(3px);
+  }
+  
+  .weekly-schedule {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-width: 100vw;
+    padding: 5px 0;
+  }
+  
+  .schedule-container {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-width: 100vw;
+    padding: 0;
   }
 }
 
